添加输入框提示信息，修改商品评论中的样式

--- a/web/src/main/resources/templates/product/review.html
+++ b/web/src/main/resources/templates/product/review.html
@@ -3,10 +3,7 @@
 	<div class="comment-list">
 		<ul id="reviewUl">
 			<li th:each="review:${reviewPage.getContent()}">
-				<div class="member-info fl">
-					<img th:src="@{/img/member.png}" width="60" height="60" />
-				</div>
-				<div class="member-global fr">
+				<div class="member-global">
 					<div class="member-msg clearfix"
 						th:with="date=${nowTime-review.createdTime.getTime().getTime()}">
 						<span class="me-name fl" th:text="${review.createdBy.name}"></span>
