修改文案错误

--- a/web/src/main/resources/templates/product/product.html
+++ b/web/src/main/resources/templates/product/product.html
@@ -190,7 +190,7 @@
 					<b class="ft22 red">￥</b><b class="ft22 red" th:text="${product.price}">1500</b></span>
 				</div>
 				<div class="panel">
-					<label>类型</label><span th:text="${product.thirdCategory.name}">芯片扫描仪</span>
+					<label>类型：</label><span th:text="${product.thirdCategory.name}">芯片扫描仪</span>
 				</div>
 				<div class="panel">
 					<label>型号：</label><span th:text="${product.model}">GenePix
