修复商品导入BUG，

--- a/admin/src/main/resources/templates/user/providerDetail.html
+++ b/admin/src/main/resources/templates/user/providerDetail.html
@@ -177,3 +177,9 @@
               	  通过审核
             </button>
         </div>
+        <div class="files_tab pos" >
+            <button id="uploadImg" class="btn btn-success btn-xs">
+                  <input type="file" file-upload="batchProducts" id="{{item.id}}" />
+                  <a href="#" >导入商品</a>
+            </button>
+        </div>
