--- a/web/src/main/resources/templates/product/review.html
+++ b/web/src/main/resources/templates/product/review.html
@@ -6,16 +6,17 @@
 				<div class="member-global">
 					<div class="member-msg clearfix"
 						th:with="date=${nowTime-review.createdTime.getTime().getTime()}">
-						<span class="me-name fl" th:text="${review.createdBy.name}"></span>
+						<span class="me-name fl" th:text="${#strings.substring(review.createdBy.name,0,3)+'****'}"></span>
 						<span class="evt-time fr">
-							<i th:if="${date/(1000*60) lt 1 }" th:text="${date/(1000)}+'秒前'"></i>
-							<i th:if="${1 lt (date/(1000*60)) and (date/(1000*60)) lt 60 }"
+							<i th:if="${date/(1000*60) lt 1 and (date/1000) le 10}" th:text="刚刚"></i>
+							<i th:if="${date/(1000*60) lt 1 and 10 lt (date/1000)}" th:text="${date/(1000)}+'秒前'"></i>
+							<i th:if="${1 le (date/(1000*60)) and (date/(1000*60)) lt 60 }"
 							th:text="${date/(1000*60)}+'分钟前'"></i>
-							<i th:if="${1 lt (date/(1000*3600)) and (date/(1000*3600)) lt 24}"
+							<i th:if="${1 le (date/(1000*3600)) and (date/(1000*3600)) lt 24}"
 							th:text="${(date/(1000*3600))}+'小时前'"></i>
-							<i th:if="${24 lt (date/(1000*3600)) and (date/(1000*3600*24))==1}"
+							<i th:if="${24 le (date/(1000*3600)) and (date/(1000*3600*24))==1}"
 							th:text="昨天"></i>
-							<i th:if="${1 lt (date/(1000*3600*24)) and (date/(1000*3600*24)) lt 10}"
+							<i th:if="${1 lt (date/(1000*3600*24)) and (date/(1000*3600*24)) le 10}"
 							th:text="${(date/(1000*3600*24))}+'天前'"></i>
 							<i th:if="${10 lt (date/(1000*3600*24))}"
 							th:text="${#dates.format(review.createdTime, 'yyyy-MM-dd')}"></i>
