修复通过三级分类搜索，点击筛选条件后三级分类无保留

--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -163,6 +163,7 @@
 								<label for="priceRange3">5-8万</label>
 							</li>
 						</ul>
+						<input type="hidden" th:field="*{thirdCategory}"/>
 						<input type="hidden" th:field="*{secondCategory}"/>
 						<input type="hidden" th:field="*{title}"/>
 					</div>
