修复品牌筛选样式

--- a/web/src/main/resources/templates/search/products.html
+++ b/web/src/main/resources/templates/search/products.html
@@ -119,7 +119,7 @@
 					<label><b>筛选：</b></label>
 				</div>
 				<form th:object="${option}">
-					<div id="brandSearch" class="search-select" style="height: 40px;">
+					<div id="brandSearch" class="search-select">
 						<label><b>品牌：</b></label>
 						<ul class="list-inline">
 							<li th:each="brand : ${brands}">
