--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -1,3 +1,11 @@
+<div class="top-line-wp">
+	<div class="wrapper">
+		<a href="/signup?user">注册</a>
+		<span>|</span>
+		<a href="/login">登录</a>
+	</div>
+</div>
+
 <div th:fragment="head" class="header" >
 	<div class="head-box clearfix">
 		<script type="text/javascript" th:src="@{/js/script.js}"></script>
