--- a/web/src/main/resources/templates/information/information.html
+++ b/web/src/main/resources/templates/information/information.html
@@ -26,6 +26,7 @@
 	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper h400">
+		<div th:include="productcategory/secondCategories">Head</div>
 		<div class="crumb news-crumb">
 			<a href="/">首页</a>
 			<i>></i>
