--- a/web/src/main/resources/templates/productcategory/productCategorys.html
+++ b/web/src/main/resources/templates/productcategory/productCategorys.html
@@ -25,6 +25,7 @@
 	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">
+		<div th:include="productcategory/secondCategories">Head</div>
 		<div class="products">
 			<div class="sort-wrap h400 clearfix">
 				<div class="sort-box fl">	
