--- a/web/src/main/resources/templates/subject/subject.html
+++ b/web/src/main/resources/templates/subject/subject.html
@@ -80,6 +80,7 @@
 	<div id="includeHeader" th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper" th:object="${subject}">
+		<div th:include="productcategory/secondCategories">Head</div>
 		<div class="crumb news-crumb nobodr">
 			<a>首页</a>
 			<i>></i>
