--- a/web/src/main/resources/templates/subject/subjects.html
+++ b/web/src/main/resources/templates/subject/subjects.html
@@ -29,6 +29,7 @@
 	<div th:include="head/head">Head</div>
 	<!-- header -->
 	<div class="wrapper">		
+	<div th:include="productcategory/secondCategories">Head</div>
 	<div class="crumb news-crumb">
 			<a href="/">首页</a>
 			<i>></i>
