添加头部商品分类菜单

--- a/web/src/main/resources/templates/head/head.html
+++ b/web/src/main/resources/templates/head/head.html
@@ -7,7 +7,7 @@
     </div>
     <div class="header">
         <div class="head-box clearfix">
-            <a href="#" class="logo">
+            <a href="/" class="logo">
                 <img th:src="@{/img/logo.png}" alt="logo" width="135"/>
                 <span class="logo-hd">
                     <img th:src="@{/img/logo-txt.png}"/>
